# Hello-dump

./: CMakeLists.txt  README.md  StructuredException.cpp  StructuredException.h  StructuredException.hpp  aux-raw.h  aux-raw.hpp  exception-generator.cpp  exception-generator.h  exception-generator.hpp  main.cpp  minidumper.cpp  minidumper.h  minidumper.hpp
